--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-cayman
 title: Github Page Site
 description: OmniSDK 是一个聚合SDK，提供了账号，支付，广告，事件统计等功能模块，游戏CP方完成一次对接后即可在各个应用商店平台和第三方发布渠道进行游戏发布。
+github:
+  is_project_page: false
